# NPP-THC

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: l3lzq5kza9248kj3xsdq2s64s060p1qb-source  n54zwdb08d40q1kmhf0zn6xa82nql8f7-source
.github/workflows/: build.yml
calc/: Cargo.toml
calc/src/: lib.rs  parameters.rs
src/: common.rs  components.rs  config.rs  errors.rs  helpers.rs  input.rs  main.rs  npp_tabs.rs  theme.rs
src/common/: errors.rs  helpers.rs  theme.rs
src/npp_tabs/: calc_code.rs  input.rs  result.rs
src/npp_tabs/input/: input_type.rs
src/npp_tabs/result/: result_formatter.rs
ui/: app.slint
ui/components/: about-dialog.slint  fw-preview.slint  hes-preview.slint  index.slint  numeric-parameter-input.slint  parameter-input.slint  rhx-preview.slint  table-3.slint
ui/models/: parameters.slint  paramters.slint
