[package]
name = "curriculum_design2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["calc"]

[dependencies]
slint = "1.11.0"
seuif97 = "1.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
calc = { path = "./calc" }
rfd = "0.15.3"

[build-dependencies]
slint-build = "1.11.0"

[[bin]]
name = "curriculum_design2"
path = "src/main.rs"
