[package]
name = "NPP-THC"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["calc", "testt"]

[dependencies]
slint = "1.11.0"
seuif97 = "1.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
calc = { path = "./calc" }
rfd = "0.15.3"

[build-dependencies]
slint-build = "1.11.0"

[[bin]]
name = "NPP-THC"
path = "src/main.rs"
