[package]
name = "NPP-THC"
version = "0.1.3"
edition = "2021"

[workspace]
members = ["calc"]

[dependencies]
iced = { version = "0.13.1", features = [
  "tokio",
  "debug",
  "highlighter",
  "markdown",
  "image"
] }
iced_aw = { version = "0.12.2", default-features = false, features = [
  "menu",
  "quad",
  "tab_bar",
  "tabs",
] }
tokio = { version = "1.45.0", features = ["fs"] }
log = "0.4.8"
seuif97 = "1.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
calc = { path = "./calc" }
rfd = "0.15.3"

[[bin]]
name = "NPP-THC"
path = "src/main.rs"
